--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
 <title>Windows 11</title>
 </head>
 <body>
+<center>
+<ul>
+  <li><img src="logo.png" width="40px" /></li>
+</ul>
+</center>
 </body>
 </html>
