--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 <center>
+<!-- Start menu, appears once the logo is clicked on the taskbar -->
+<div class="start" style="bottom: 70px;"><strong>Pinned</strong></div>
+
+<!-- Transparent taskbar -->
 <ul>
   <li><img src="logo.png" width="40px" /></li>
 </ul>
