--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <center>
 <!-- Start menu, appears once the logo is clicked on the taskbar -->
-<div class="start" style="bottom: 70px;"><strong>Pinned</strong></div>
+<div class="start" id="startmenu" style="bottom: 70px;"><strong>Pinned</strong></div>
 
 <!-- Transparent taskbar -->
 <ul>
