--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
 <center>
 <!-- Start menu, appears once the logo is clicked on the taskbar -->
-<div class="start" id="startmenu" style="bottom: 70px;"><strong>Pinned</strong></div>
+<div class="start" id="startmenu_MMIA" style="bottom: 70px;"><strong>Pinned</strong></div>
 
 <!-- Transparent taskbar -->
 <ul>
-  <li><img src="logo.png" width="40px" /></li>
+  <li id="logostart_NXJH"><img src="logo.png" width="40px" /></li>
 </ul>
 </center>
 </body>
