--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <link rel="icon" href="icon.png" />
 <link rel="stylesheet" href="css/style.css"/>
+
+<script src="js/script.js"></script>
+
 <title>Windows 11</title>
 </head>
 <body>
