--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="icon" href="icon.png" />
+<link rel="icon" href="logo.png" />
 <link rel="stylesheet" href="css/style.css"/>
 
 <title>Windows 11</title>
