--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 <center>
 <!-- Start menu, appears once the logo is clicked on the taskbar -->
-<div class="start" id="startmenu_MMIA" style="bottom: 70px;"><strong>Pinned</strong></div>
+<div class="start" id="startmenu_MMIA" style="bottom: 70px;"><font size="5"><strong>Pinned</strong></font>
+<p style="color:grey;">You have no pinned apps here.</p></div>
 
 <!-- Transparent taskbar -->
 <ul>
