--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <title>Windows 11</title>
 </head>
 <body>
+<div id="mydiv">
+  <div id="mydivheader">About Windows 11</div>
+</div>
+
 <center>
 <!-- Start menu, appears once the logo is clicked on the taskbar -->
 <div class="start" id="startmenu_MMIA" style="bottom: 70px;"><font size="5"><strong>Pinned</strong></font>
@@ -19,5 +23,6 @@
 </center>
 
 <script src="js/script.js"></script>
+<script src="js/window.js"></script>
 </body>
 </html>
