--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Windows 11</title>
 </head>
 <body>
-<div id="mydiv">
+<div id="mydiv" style="top: 20px;left: 20px;width: 500px;height: 300px;">
   <div id="mydivheader">About Windows 11</div>
 </div>
 
