--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body>
 <div id="mydiv" style="top: 20px;left: 20px;width: 500px;height: 300px;">
   <div id="mydivheader">About Windows 11</div>
+  <div style="
+    display: inline-block;
+    margin: 0px;
+    width: 40px;
+    background: rgb(255, 30, 30, 0.7);
+    text-align: center;
+    float: right;
+" onclick="closediv();">×</div>
 </div>
 
 <center>
