--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 </head>
 <body>
 <div id="mydiv" style="top: 20px;left: 20px;width: 500px;height: 300px;">
-  <div id="mydivheader">About Windows 11</div>
-  <div style="
+  <div id="mydivheader">About Windows 11
+  <div class="clse-8A" style="
     display: inline-block;
     margin: 0px;
     width: 40px;
     background: rgb(255, 30, 30, 0.7);
     text-align: center;
     float: right;
+    color: white;
 " onclick="closediv();">×</div>
+  </div>
 </div>
 
 <center>
