--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     text-align: center;
     float: right;
     color: white;
+    z-index:999;
 " onclick="closediv();">×</div>
   </div>
 </div>
