--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Windows 11</title>
 </head>
 <body>
-<div id="mydiv" style="top: 20px;left: 20px;width: 500px;height: 300px;">
+<div id="mydiv" style="top: 20px;left: 20px;width: 500px;height: 300px;z-index:5">
   <div id="mydivheader">About Windows 11
   <div class="clse-8A" style="
     display: inline-block;
@@ -17,7 +17,7 @@
     text-align: center;
     float: right;
     color: white;
-    z-index:999;
+    z-index:2;
 " onclick="closediv();">×</div>
   </div>
 </div>
