--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <!-- Transparent taskbar -->
 <ul>
   <li id="logostart_NXJH"><img src="logo.png" width="40px" /></li>
+  <li id="logoabout_JJ8H"><img src="about.png" width="40px" /></li>
 </ul>
 </center>
 
