--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
     color: white;
     z-index:2;
 " onclick="closediv();">×</div>
+    <img src="logoextended.png" style="
+    width: 450px;
+    margin: 20px;
+    margin-bottom: 0px;
+    margin-top: 5px;
+">
+    <hr>
   </div>
 </div>
 
