--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
     <hr>
 </div>
 
+<div id="mydiv2" style="top: 20px;left: 20px;width: 500px;height: 300px;z-index:999;display:none;">
+  <div id="mydiv2header">Windows Store
+  <div class="clse-JH" style="
+    display: inline-block;
+    margin: 0px;
+    width: 40px;
+    background: rgb(255, 30, 30, 0.7);
+    text-align: center;
+    float: right;
+    color: white;
+    z-index:2;
+" onclick="closediv2();">×</div>
+  </div>
+<p style="color:grey;">You are not connected to an internet connection.</p>
+</div>
+
 <center>
 <!-- Start menu, appears once the logo is clicked on the taskbar -->
 <div class="start" id="startmenu_MMIA" style="bottom: 70px;"><font size="5"><strong>Pinned</strong></font>
@@ -38,6 +54,7 @@
 <ul>
   <li id="logostart_NXJH"><img src="logo.png" width="40px" /></li>
   <li id="logoabout_JJ8H"><img src="about.png" width="40px" /></li>
+  <li id="logostore_JMN0"><img src="store.png" width="40px" /></li>
 </ul>
 </center>
 
