--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <hr>
 </div>
 
-<div id="mydiv2" style="top: 20px;left: 20px;width: 500px;height: 300px;z-index:999;display:none;">
+<div id="mydiv2" style="top: 20px;left: 20px;width: 500px;height: 300px;z-index:999;opacity:0;">
   <div id="mydiv2header">Windows Store
   <div class="clse-JH" style="
     display: inline-block;
