--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 <center>
 <!-- Start menu, appears once the logo is clicked on the taskbar -->
 <div class="start" id="startmenu_MMIA" style="bottom: 70px;"><font size="5"><strong>Pinned</strong></font>
-<p style="color:grey;">You have no pinned apps here.</p></div>
+<br>
+<li id="logostore_JMN0"><img src="store.png" width="40px" /></li>
+</div>
 
 <!-- Transparent taskbar -->
 <ul>
