--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <title>Windows 11</title>
 </head>
 <body>
-<div id="mydiv" style="top: 20px;left: 20px;width: 500px;height: 300px;z-index:999">
-  <div id="mydivheader">About Windows 11
+<div id="mydiv" class="window" style="top: 20px;left: 20px;width: 500px;height: 300px;z-index:999">
+  <div id="mydivheader" class="headers">About Windows 11
   <div class="clse-8A" style="
     display: inline-block;
     margin: 0px;
@@ -29,8 +29,8 @@
     <hr>
 </div>
 
-<div id="mydiv2" style="top: 20px;left: 20px;width: 500px;height: 300px;z-index:999;opacity:0;">
-  <div id="mydiv2header">Windows Store
+<div id="mydiv2" class="window" style="top: 20px;left: 20px;width: 500px;height: 300px;z-index:999;opacity:0;">
+  <div id="mydiv2header" class="window">Windows Store
   <div class="clse-JH" style="
     display: inline-block;
     margin: 0px;
