--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 
 <div id="mydiv2" class="window" style="top: 20px;left: 20px;width: 500px;height: 300px;z-index:999;opacity:0;">
-  <div id="mydiv2header" class="window">Windows Store
+  <div id="mydiv2header" class="headers">Windows Store
   <div class="clse-JH" style="
     display: inline-block;
     margin: 0px;
