--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <!-- Transparent taskbar -->
 <ul>
   <li id="logostart_NXJH"><img src="logo.png" width="40px" /></li>
-  <li id="logostore_JMN0"><img src="store.png" width="40px" /></li>
+  <li onclick="store9()"><img src="store.png" width="40px" /></li>
   <li id="logoabout_JJ8H"><img src="about.png" width="40px" /></li>
 </ul>
 </center>
