--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <div id="mydiv2" class="window" style="top: 20px;left: 20px;width: 500px;height: 300px;z-index:999;opacity:0;">
   <div id="mydiv2header" class="headers">Windows Store
-  <div class="clse-JH" style="
+  <div class="clse-8A" style="
     display: inline-block;
     margin: 0px;
     width: 40px;
