--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     z-index:2;
 " onclick="closediv2();">×</div>
   </div>
-<p style="color:grey;">You are not connected to an internet connection.</p>
+<p>You are not connected to an internet connection.</p>
 </div>
 
 <center>
