--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <!-- Start menu, appears once the logo is clicked on the taskbar -->
 <div class="start" id="startmenu_MMIA" style="bottom: 70px;"><font size="5"><strong>Pinned</strong></font>
 <br>
-<li id="logostore_JMN0"><img src="store.png" width="40px" /></li>
+<li id="logostore_JMN0" onclick="store9()"><img src="store.png" width="40px" /></li>
 </div>
 
 <!-- Transparent taskbar -->
