--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
 <p>You are not connected to an internet connection.</p>
 </div>
 
+<div id="mydiv3" class="window" style="top: 20px;left: 20px;width: 500px;height: 300px;z-index:999;opacity:0;">
+  <div id="mydiv3header" class="headers">
+  <div class="clse-8A" style="
+    display: inline-block;
+    margin: 0px;
+    width: 40px;
+    background: rgb(255, 30, 30, 0.7);
+    text-align: center;
+    float: right;
+    color: white;
+    z-index:2;
+" onclick="closediv3();">×</div>
+  </div>
+<p>GOD MODE ACTIVATED</p>
+</div>
+
 <center>
 <!-- Start menu, appears once the logo is clicked on the taskbar -->
 <div class="start" id="startmenu_MMIA" style="bottom: 70px;"><font size="5"><strong>Pinned</strong></font>
