--- a/index.html
+++ b/index.html
@@ -78,5 +78,6 @@
 
 <script src="js/script.js"></script>
 <script src="js/window.js"></script>
+<script src="js/easteregg.js"></script>
 </body>
 </html>
