--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
     z-index:2;
 " onclick="closediv2();">×</div>
   </div>
+    <div class="content">
 <p>You are not connected to an internet connection.</p>
+    </div>
 </div>
 
 <div id="mydiv3" class="window" style="top: 400px;left: 400px;width: 500px;height: 300px;z-index:999;opacity:0;">
@@ -65,8 +67,8 @@
     color: white;
     z-index:2;
 " onclick="closediv3();">×</div>
-  </div>
-<p>GOD MODE ACTIVATED</p>
+  </div><div class="content">
+    <p>GOD MODE ACTIVATED</p></div>
 </div>
 
 <center>
