--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <ul>
   <li id="logostart_NXJH"><img src="logo.png" width="40px" /></li>
   <li onclick="store9()"><img src="store.png" width="40px" /></li>
-  <li id="logoabout_JJ8H"><img src="about.png" width="40px" /></li>
+  <li id="logoabout_JJ8H"><img src="icons/info.png" width="40px" /></li>
 </ul>
 </center>
 
