--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
 <title>Windows 11</title>
 </head>
 <body>
-<font style="
+<img src="icons/Desktop.png" style="
     position: absolute;
     right: 10px;
     bottom: 10px;
-    color: #003eff;
-    z-index: 100;
-    text-shadow: 1px 1px #858585;
-">Windows 11<br>Developer Edition</font>
+" onclick="Closeall();" />
 <div id="mydiv" class="window" style="top: 20px;left: 20px;width: 500px;height: 300px;z-index:999">
   <div id="mydivheader" class="headers">About Windows 11
   <div class="clse-8A" style="
