--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <img src="icons/Desktop.png" style="
     position: absolute;
     right: 10px;
+    z-index: 20;
+    width: 40px;
     bottom: 10px;
-" onclick="Closeall();" />
+    cursor: pointer;
+" onclick="closeAll();">
 <div id="mydiv" class="window" style="top: 20px;left: 20px;width: 500px;height: 300px;z-index:999">
   <div id="mydivheader" class="headers">About Windows 11
   <div class="clse-8A" style="
